# libpcl

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  a00002.html  a00005.html  a00005_source.html  a00008.html  a00008.js  a00008_source.html  a00011.html  a00011_source.html  a00014.html  a00014.js  a00014_source.html  a00017.html  a00017.js  a00017_source.html  a00020.html  a00020.js  a00020_source.html  a00023.html  a00023.js  a00023_source.html  a00026.html  a00026.js  a00026_source.html  a00029.html  a00029.js  a00029_source.html  a00032.html  a00032.js  a00032_source.html  a00035.html  a00035_source.html  a00038.html  a00038_source.html  a00041.html  a00041.js  (+120 more)
examples/: CMakeLists.txt  buf.c  cipher.c  digest.c  error.c  exec.c  getopt.c  htable.c  https.c  json.c  ls.c  sysinfo.c  test.json  x.json
src/: CMakeLists.txt  init.c  net.c  ssl.c
src/alloc/: CMakeLists.txt  cleanup_ptr.c  free_trace.c  malloc_trace.c  memory_handler.c  realloc_trace.c  zalloc_trace.c
src/array/: CMakeLists.txt  array.c  array_add.c  array_cleanup_ptr.c  array_create.c  array_free.c  array_get.c  array_indexof.c  array_insert.c  array_remove.c  array_set.c  array_sort.c
src/atomic/: CMakeLists.txt  atomic_add_fetch.c  atomic_compare_exchange.c  atomic_exchange.c  atomic_fetch.c  atomic_fetch_add.c
src/buf/: CMakeLists.txt  _buf.h  buf_clear.c  buf_copy.c  buf_data.c  buf_free.c  buf_get.c  buf_getchar.c  buf_getint16.c  buf_getint32.c  buf_getint64.c  buf_getint8.c  buf_getstr.c  buf_grow.c  buf_init.c  buf_pos.c  buf_put.c  buf_putchar.c  buf_putf.c  buf_putint16.c  buf_putint32.c  buf_putint64.c  buf_putint8.c  buf_putstr.c  buf_reset.c  buf_vputf.c
src/crypto/: CMakeLists.txt  _crypto.h  cipher.c  cipher_create.c  cipher_final.c  cipher_free.c  cipher_isaead.c  cipher_name.c  cipher_reset.c  cipher_update.c  digest.c  digest_create.c  digest_final.c  digest_free.c  digest_len.c  digest_name.c  digest_update.c  digest_value.c  rand.c
src/dir/: CMakeLists.txt  _dir.h  chdir.c  closedir.c  dir_path.c  mkdir.c  mkdirs.c  opendir.c  readdir.c  rmdir.c  rmdir_r.c
src/dl/: CMakeLists.txt  dlclose.c  dlopen.c  dlsym.c
src/errctx/: CMakeLists.txt  _errctx.h  err_ctx_clear.c  err_ctx_clone.c  err_ctx_create.c  err_ctx_fprintf.c  err_ctx_free.c  err_ctx_serialize.c  err_ctx_sprintf.c  err_ctx_trace_free.c  err_ctx_vfprintf.c  err_ctx_vsprintf.c
src/error/: CMakeLists.txt  README.md  _errmsg.h  _error.h  _unix_errmap.h  _win32_errmap.h  err_clear.c  err_code.c  err_ctx.c  err_fprintf.c  err_freeze.c  err_json.c  err_last.c  err_lastmsg.c  err_lastos.c  err_msg.c  err_name.c  err_os2pcl.c  err_osmsg.c  err_osname.c  err_serialize.c  err_set.c  err_setjson.c  err_sprintf.c  err_trace.c  err_trace_free.c  err_vfprintf.c  err_vjson.c  err_vset.c  err_vsprintf.c  err_vtrace.c  errmap.c  msgmap.c  win32_err_crt2os.c  win32_oserrno.c  win32_setoserrno.c
src/event/: CMakeLists.txt  README.md  _event.h  event_context.c  event_dispatch.c  event_register.c  event_unregister.c
src/farmhash/: CMakeLists.txt  farmhash128.cpp  farmhash32.cpp  farmhash64.cpp
src/file/: CMakeLists.txt  _file.h  close.c  fdpath.c  file_alloc.c  file_close.c  file_init.c  file_lock.c  file_open.c  file_seek.c  flagconv.c  flock.c  open.c  realpath.c  remove.c  rename.c  seek.c  unix_file_open.c  unix_read.c  unix_tryread.c  unix_trywrite.c  unix_write.c  unlink.c  win32_file_open.c  win32_read.c  win32_tryio.c  win32_write.c
src/htable/: CMakeLists.txt  _htable.h  htable.c  htable_capacity.c  htable_chkcapacity.c  htable_clear.c  htable_create.c  htable_free.c  htable_get.c  htable_init.c  htable_iter.c  htable_keys.c  htable_lookup.c  htable_put.c  htable_rehash.c  htable_remove.c  htable_remove_entry.c
src/init/: CMakeLists.txt  _init.h  getopt.c  init.c  initopt.c
src/io/: CMakeLists.txt  asprintf.c  fdopen.c  fileno.c  fmtconv.c  fopen.c  fprintf.c  popen.c  printf.c  sprintf.c  tmpfile.c  vfprintf.c  vprintf.c  vsprintf.c
src/json/: CMakeLists.txt  _json.h  json_arr.c  json_arradd.c  json_arraddbool.c  json_arraddint.c  json_arraddnull.c  json_arraddreal.c  json_arraddstr.c  json_array.c  json_array_add.c  json_array_get.c  json_array_remove.c  json_arrget.c  json_arrgetint.c  json_arrgetreal.c  json_arrgetstr.c  json_arrisarr.c  json_arrisbool.c  json_arrisfalse.c  json_arrisint.c  json_arrisnull.c  json_arrisobj.c  json_arrisreal.c  json_arrisstr.c  json_arristrue.c  json_arrremove.c  json_bool.c  json_boolean.c  json_compile.c  json_count.c  json_decode.c  json_encode.c  json_encode_array.c  json_encode_object.c  json_encode_string.c  json_encode_value.c  json_false.c  json_free.c  json_freepath.c  (+48 more)
src/log/: CMakeLists.txt  log_event.c  log_event_default.c  log_vevent.c
src/net/: CMakeLists.txt  _net.h  net_addr2ip.c  net_addrlen.c  net_ai2pcl.c  net_dns2pcl.c  net_dnstxtrec.c  net_host2addr.c  net_inet2ip.c  net_ip2inet.c  net_resolve.c  net_reverse.c
src/process/: CMakeLists.txt  _process.h  getenv.c  proc_close.c  proc_freecmd.c  proc_parsecmd.c  proc_path.c  proc_pipe.c  proc_self.c  proc_setpriv.c  setenv.c  unix_proc_exec.c  unix_proc_path.c  unsetenv.c  win32_proc_exec.c  win32_proc_path.c
src/queue/: CMakeLists.txt  _queue.h  queue.c  queue_add.c  queue_clear.c  queue_create.c  queue_empty.c  queue_free.c  queue_peek.c  queue_remove.c  queue_size.c
src/socket/: CMakeLists.txt  _socket.h  accept.c  bind.c  connect.c  listen.c  pcl_socket_close.c  recv.c  recvall.c  select.c  send.c  sendall.c  shutdown.c  socket.c  socket_alloc.c  socket_close.c  socket_error.c  socket_fd.c  socket_ip.c  socket_isalive.c  socket_ispassive.c  socket_port.c  socket_setkeepalive.c  socket_setnonblocking.c  socket_setrcvtimeo.c  socket_setsndtimeo.c  win32_socket_handler.c
src/ssl/: CMakeLists.txt  _ssl.h  openssl_error.c  ssl.c  ssl_accept.c  ssl_certentry.c  ssl_close.c  ssl_configure_socket.c  ssl_connect.c  ssl_create.c  ssl_error.c  ssl_free.c  (+10 more)
tests/: CMakeLists.txt  array.c  buf.c  crypto.c  dir.c  exec.c  htable.c  https.c  json.c  log.c  sysinfo.c  test-data.json  test.c  test.h  time.c
(+2230 files in other folders)
