
add_library(json OBJECT
	json_array.c
	json_array_add.c
	json_array_get.c
	json_boolean.c
	json_decode.c
	json_encode.c
	json_encode_array.c
	json_encode_object.c
	json_encode_string.c
	json_encode_value.c
	json_false.c
	json_free.c
	json_integer.c
	json_null.c
	json_object.c
	json_object_get.c
	json_object_put.c
	json_parse_array.c
	json_parse_number.c
	json_parse_object.c
	json_parse_string.c
	json_parse_value.c
	json_real.c
	json_skipws.c
	json_string.c
	json_string_len.c
	json_true.c
	json_utf8check.c)

