
add_library(string OBJECT
	astrcatf.c
	base64_decode.c
	base64_encode.c
	hex_decode.c
	hex_encode.c
	strcatf.c
	strfbytes.c
	stristr.c
	strlower.c
	strncat.c
	strncpy.c
	strndup.c
	strreplace.c
	strsignal.c
	strslice.c
	strsplit.c
	strtrimset.c
	strtrunc.c
	strupper.c
	tcs_to_utf8.c
	utf8_to_tcs.c)

